argocd-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  annotations:
    linkerd.io/inject: enabled
