argocd-repo-server-deploy-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      serviceAccountName: argocd
      automountServiceAccountToken: true
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - name: custom-tools
          mountPath: /usr/local/bin/argocd-vault-plugin
          subPath: argocd-vault-plugin
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 128Mi
      volumes:
      - name: custom-tools
        emptyDir: {}
