argocd-server-deploy-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 64Mi
